# thermox

./: .gitignore  .pre-commit-config.yaml  README.md  log_prob.py  pyproject.toml  requirements.txt  thermo_linear_algebra.ipynb
.github/workflows/: publish_pypi.yaml  tests.yaml
examples/: README.md  associative_scan.ipynb  diffrax_comparison.ipynb  diffrax_comparison_with_associative_scan.ipynb  thermo_linear_algebra.ipynb  thermodynamic_linear_algebra.ipynb
examples/matrix_exponentials/: .gitignore  README.md  matrix_generation.py  plot.py  run.py
tests/: speed.py  test_conditional.py  test_linalg.py  test_log_prob.py  test_sampler.py  test_utils.py  tests.py
thermox/: __init__.py  conditional.py  linalg.py  log_prob.py  prob.py  sampler.py  utils.py
